Progress on precipitationAnalysis.ipynb

--- a/precipAnalysis.ipynb
+++ b/precipAnalysis.ipynb
@@ -266,24 +266,322 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2016-08-24</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-25</th>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-26</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-27</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-28</th>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-29</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-30</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-31</th>\n",
+       "      <td>0.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-01</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-02</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-03</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-04</th>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-05</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-06</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-07</th>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-08</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-09</th>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-10</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-11</th>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-12</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-13</th>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-14</th>\n",
+       "      <td>1.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-15</th>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-16</th>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-17</th>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-18</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-19</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-20</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-21</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-22</th>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-23</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-24</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-25</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-26</th>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-27</th>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-28</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-29</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-09-30</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-01</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-02</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-03</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-04</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-05</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-06</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-07</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-08</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-09</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-10</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-11</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-10-12</th>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            prcp\n",
+       "date            \n",
+       "2016-08-24  0.08\n",
+       "2016-08-25  0.08\n",
+       "2016-08-26  0.00\n",
+       "2016-08-27  0.00\n",
+       "2016-08-28  0.01\n",
+       "2016-08-29  0.00\n",
+       "2016-08-30  0.00\n",
+       "2016-08-31  0.13\n",
+       "2016-09-01  0.00\n",
+       "2016-09-02  0.00\n",
+       "2016-09-03  0.00\n",
+       "2016-09-04  0.03\n",
+       "2016-09-05   NaN\n",
+       "2016-09-06   NaN\n",
+       "2016-09-07  0.05\n",
+       "2016-09-08  0.00\n",
+       "2016-09-09  0.03\n",
+       "2016-09-10  0.00\n",
+       "2016-09-11  0.05\n",
+       "2016-09-12  0.00\n",
+       "2016-09-13  0.02\n",
+       "2016-09-14  1.32\n",
+       "2016-09-15  0.42\n",
+       "2016-09-16  0.06\n",
+       "2016-09-17  0.05\n",
+       "2016-09-18  0.00\n",
+       "2016-09-19  0.00\n",
+       "2016-09-20  0.00\n",
+       "2016-09-21  0.00\n",
+       "2016-09-22  0.02\n",
+       "2016-09-23  0.00\n",
+       "2016-09-24  0.00\n",
+       "2016-09-25  0.00\n",
+       "2016-09-26  0.06\n",
+       "2016-09-27  0.02\n",
+       "2016-09-28  0.00\n",
+       "2016-09-29  0.00\n",
+       "2016-09-30  0.00\n",
+       "2016-10-01  0.00\n",
+       "2016-10-02  0.00\n",
+       "2016-10-03  0.00\n",
+       "2016-10-04  0.00\n",
+       "2016-10-05  0.00\n",
+       "2016-10-06  0.00\n",
+       "2016-10-07  0.00\n",
+       "2016-10-08  0.00\n",
+       "2016-10-09  0.00\n",
+       "2016-10-10  0.00\n",
+       "2016-10-11  0.00\n",
+       "2016-10-12  0.00"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
     "lastDate = dt.datetime(2017, 8, 23)\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "\n",
+    "prevDate = dt.datetime(2016, 8, 23)\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
+    "mSel = [Measurement.date, Measurement.prcp]\n",
     "\n",
+    "lastYearPrcp = session.query(*mSel).\\\n",
+    "    filter(Measurement.date > prevDate).\\\n",
+    "    group_by(Measurement.date).\\\n",
+    "    order_by(Measurement.date).all()\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
+    "lastYearPrcpDf = pd.DataFrame(lastYearPrcp, columns=['date', 'prcp'])\n",
+    "lastYearPrcpDf.set_index('date', inplace=True,)\n",
     "\n",
     "# Sort the dataframe by date\n",
-    "\n",
+    "lastYearPrcpDf.head(50)\n",
     "\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "\n",
