Progress on precipitationAnalysis.ipynb

--- a/precipAnalysis.ipynb
+++ b/precipAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,19 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save references to each table\n",
-    "Measurement = Base.classes.measurement\n",
+    "m = Base.classes.measurement\n",
     "\n",
-    "Station = Base.classes.station"
+    "s = Base.classes.station"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
        " ...]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
        " (9, 'USC00516128', 'MANOA LYON ARBO 785.2, HI US', 21.3331, -157.8025, 152.4)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1205,13 +1205,13 @@
    "source": [
     "#Using the inspector to get the names and types of the columns in the measurement set\n",
     "mColumns = inspector.get_columns('measurement')\n",
-    "for m in mColumns:\n",
-    "    print(m['name'], m[\"type\"])\n"
+    "for mc in mColumns:\n",
+    "    print(mc['name'], mc[\"type\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1230,34 +1230,33 @@
    "source": [
     "#Using the inspector to get the column names and types in the station set\n",
     "sColumns = inspector.get_columns('station')\n",
-    "for s in sColumns:\n",
-    "    print(s['name'], s[\"type\"])\n"
+    "for sc in sColumns:\n",
+    "    print(sc['name'], sc[\"type\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('2017-08-23')"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The last day of the data is ('2017-08-23',)\n"
+     ]
     }
    ],
    "source": [
     "#Using an order by function to list the dates in descending order and pulling the first one to get latest date\n",
-    "session.query(Measurement.date).order_by(Measurement.date.desc()).first()"
+    "lastDate = session.query(m.date).order_by(m.date.desc()).first()\n",
+    "\n",
+    "print(f\"The last day of the data is {lastDate}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2265,7 @@
        " ...]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,10 +2277,10 @@
     "# Calculate the date one year from the last date in data set.\n",
     "prevDate = dt.datetime(2016, 8, 22)\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "mSel = [Measurement.date, Measurement.prcp]\n",
+    "mSel = [m.date, m.prcp]\n",
     "\n",
     "lastYearPrcp = session.query(*mSel).\\\n",
-    "    filter(Measurement.date > prevDate).all()\n",
+    "    filter(m.date > prevDate).all()\n",
     "\n",
     "\n",
     "\n",
@@ -2291,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2389,7 @@
        "[2021 rows x 1 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2399,6 +2398,7 @@
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "\n",
     "lastYearPrcpDf = pd.DataFrame(lastYearPrcp, columns=['date', 'prcp'])\n",
+    "lastYearPrcpDf.rename({\"prcp\": \"Precipitation\"})\n",
     "cleanLastYearPrcpDf = lastYearPrcpDf.dropna()\n",
     "sortLastYearPrcpDf = cleanLastYearPrcpDf.sort_values(by = ['date'])\n",
     "sortLastYearPrcpDf.set_index('date', inplace=True,)\n",
@@ -2408,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -2518,7 +2518,7 @@
        "max       6.700000"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,30 +2537,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 9 stations in the dataset\n"
+     ]
+    }
+   ],
    "source": [
-    "# Design a query to calculate the total number stations in the dataset\n"
+    "# Design a query to calculate the total number stations in the dataset\n",
+    "stationCount = session.query(s).group_by(s.station).count()\n",
+    "print(f\"There are {stationCount} stations in the dataset\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 'WAIHEE 837.5, HI US', 2772),\n",
+       " ('USC00519397', 'WAIKIKI 717.2, HI US', 2724),\n",
+       " ('USC00513117', 'KANEOHE 838.1, HI US', 2709),\n",
+       " ('USC00519523', 'WAIMANALO EXPERIMENTAL FARM, HI US', 2669),\n",
+       " ('USC00516128', 'MANOA LYON ARBO 785.2, HI US', 2612),\n",
+       " ('USC00514830', 'KUALOA RANCH HEADQUARTERS 886.9, HI US', 2202),\n",
+       " ('USC00511918', 'HONOLULU OBSERVATORY 702.2, HI US', 1979),\n",
+       " ('USC00517948', 'PEARL CITY, HI US', 1372),\n",
+       " ('USC00518838', 'UPPER WAHIAWA 874.3, HI US', 511)]"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "sSel = [m.station,\n",
+    "       s.name,\n",
+    "       func.count(s.name)]\n",
+    "\n",
+    "stationRows = session.query(*sSel).\\\n",
+    "    filter(s.station == m.station).\\\n",
+    "    group_by(s.name).\\\n",
+    "    order_by(func.count(s.name).desc()).all()\n",
+    "\n",
+    "\n",
+    "stationRows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest Temp recorded as the Waihee station is (54.0, 85.0, 71.66378066378067) F\n"
+     ]
+    }
+   ],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "tempSel = [func.min(m.tobs),\n",
+    "          func.max(m.tobs),\n",
+    "          func.avg(m.tobs)]\n",
+    "\n",
+    "mTemps = session.query(*tempSel).\\\n",
+    "    filter(m.station == \"USC00519281\").all()\n",
+    "\n",
+    "print(f\"The lowest Temp recorded as the Waihee station is {mTemps[0]} F\")"
    ]
   },
   {
